--- a/requirements.txt
+++ b/requirements.txt
@@ -176,6 +176,7 @@ rich==13.8.1
 rpds-py==0.20.0
 ruamel.yaml==0.17.40
 ruamel.yaml.clib==0.2.8
+ruff==0.6.8
 scipy==1.14.1
 semver==3.0.2
 Send2Trash==1.8.3
